syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "entities/simple_data.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message ProductionStandardListRequest {
  int32 company = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "int32 value field",
    required: [
      "company"
    ],
  }];
  optional int32 page = 2;
  optional int32 limit = 3;
  optional string search = 4;
}

message ProductionStandardListResponse {
  int32 code = 1;
  string message = 2;
  repeated SimpleData details = 3;
}